--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
