--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Wwd-2024/Hungry-Me#readme",
   "devDependencies": {
+    "constants-browserify": "^1.0.0",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
